<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FereastraAdaugareStupina">

    <EditText
        android:id="@+id/fas_descriere_stupina"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/descriere"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/fas_btn_adauga_stupina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/fas_locatie_stupina"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/locatie"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/fas_descriere_stupina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="233dp"
        android:layout_height="179dp"
        android:layout_marginTop="56dp"
        android:text="@string/adauga_stupina"
        android:textColor="#B26C45"
        android:textSize="64sp"
        android:fontFamily="@font/oleoscriptswashcaps_bold"
        android:rotation="-15"
        app:layout_constraintBottom_toTopOf="@+id/cc_nume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cc_nume"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nume_stupina"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/fas_locatie_stupina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/fas_btn_adauga_stupina"
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/round_corners_actionbtn"
        android:text="@string/adauga_stupina_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtintrebareAS"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/intrebare"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />
</androidx.constraintlayout.widget.ConstraintLayout>