<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/fl_lipsa_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/nu_ai_cont_apasa_aici"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="350dp"
        android:layout_height="352dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_2_450"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/fl_btn_logare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corners_actionbtn"
        android:text="@string/logare"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/fl_ai_uitat_parola"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fl_ai_uitat_parola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/ai_uitat_parola"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/fl_lipsa_cont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fl_user"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/round_corners"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="User"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/fl_parola"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fl_parola"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/parola"
        android:textAlignment="center"
        android:background="@drawable/round_corners"
        app:layout_constraintBottom_toTopOf="@+id/fl_btn_logare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        android:layout_gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fl_bum_parola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtIntrebare"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:scaleY="2"
        android:scaleX="2"
        android:text="@string/intrebare"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

</androidx.constraintlayout.widget.ConstraintLayout>