<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FereastraPierdereParola">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fpp_parola_noua"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/round_corners"
        android:hint="@string/parola_noua"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/fpp_conf_parola_noua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fpp_bum_parola_noua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fpp_conf_parola_noua"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/round_corners"
        android:hint="@string/confirmare_parola_noua"
        app:layout_constraintBottom_toTopOf="@+id/fpp_btn_reseteaza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fpp_bum_conf_parola_noua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/fpp_cont_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/round_corners"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/introduceti_contul_de_email"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/fpp_parola_noua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="353dp"
        android:layout_height="168dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/oleoscriptswashcaps_bold"
        android:rotation="-15"
        android:text="@string/ai_uitat_parola"
        android:textColor="#B26C45"
        android:textSize="49sp"
        app:layout_constraintBottom_toTopOf="@+id/fpp_cont_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <Button
        android:id="@+id/fpp_btn_reseteaza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="@string/reseteaza"
        android:textColor="@color/white"
        android:background="@drawable/round_corners_actionbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtuitatParola"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/intrebare"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />
</androidx.constraintlayout.widget.ConstraintLayout>